crates/test-ui/ui/msg_send_no_return_type.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_no_return_type.rs
  |
  |         msg_send![cls, new];
  |         ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider giving `result` an explicit type
 --> $WORKSPACE/crates/objc2/src/macros.rs
  |
  |         let result: _;
  |                   +++
